Fix modal z-index

--- a/src/AdminSite/wwwroot/css/admin-custom.css
+++ b/src/AdminSite/wwwroot/css/admin-custom.css
@@ -482,7 +482,7 @@ button.navbar-toggler:focus, button.navbar-toggler:hover {
 .modal {
     display: none; /* Hidden by default */
     /*position: fixed;*/ /* Stay in place */
-    z-index: 1; /* Sit on top */
+    /*z-index: 1;*/ /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
